--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.10.0
+  firebase_auth: ^5.4.0
+  cloud_firestore: ^5.6.1
+  firebase_storage: ^12.4.0
+  image_picker: ^1.1.2
+  provider: ^6.1.2
+  uuid: ^4.5.1
+  firebase_messaging: ^15.2.0
+  cached_network_image: ^3.4.1
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
