--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,7 @@ dependencies:
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.1
   firebase_storage: ^12.4.0
-  image_picker: ^1.1.2
-  provider: ^6.1.2
-  uuid: ^4.5.1
-  firebase_messaging: ^15.2.0
-  cached_network_image: ^3.4.1
-  flutter_local_notifications: ^18.0.1
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
