--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.1
   firebase_storage: ^12.4.0
   shared_preferences: ^2.3.5
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_test:
