--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^12.4.0
   shared_preferences: ^2.3.5
   animate_do: ^3.3.4
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
