--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.3.5
   animate_do: ^3.3.4
   google_sign_in: ^6.2.2
+  google_gemini: ^0.1.2
 
 dev_dependencies:
   flutter_test:
