--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   animate_do: ^3.3.4
   google_sign_in: ^6.2.2
   google_gemini: ^0.1.2
+  the_apple_sign_in: ^1.1.1
 
 dev_dependencies:
   flutter_test:
