--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,9 @@ flutter:
     - assets/
     - assets/Splash/
     - assets/images/
+    - assets/Login/
+    - assets/App Data/
+    - assets/Readme/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
