--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,18 @@ dependencies:
   google_gemini: ^0.1.2
   the_apple_sign_in: ^1.1.1
   firebase_database: ^11.3.1
+  
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  emoji_picker_flutter: ^4.3.0
+  firebase_messaging: ^15.2.1
+  googleapis_auth: ^1.6.0
+  http: ^1.3.0
+  flutter_notification_channel: ^3.1.0
+  gallery_saver_plus: ^3.2.1
+  lottie: ^3.2.0
+  google_generative_ai: ^0.4.6
+  intl: ^0.20.2
  
 
 dev_dependencies:
@@ -80,10 +92,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/Splash/
     - assets/images/
-    - assets/Login/
-    - assets/App Data/
+    - assets/lottie/
     - assets/Readme/
 
   # An image asset can refer to one or more resolution-specific "variants", see
